# wvu-ieng-331.github.io

./: .gitignore  README.md  _brand.yml  _quarto.yml  hello.py  index.qmd  pyproject.toml  styles.css  test.py
_freeze/learning-modules/02-intro-to-python/execute-results/: html.json
_freeze/learning-modules/03-data-structures/execute-results/: html.json
course-information/: _instructor-info.qmd  _syllabus_print.qmd  grading-and-deliverables.qmd  policies.qmd  resources.qmd  schedule.qmd
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/course-information/: grading-and-deliverables.html  policies.html  resources.html  schedule.html
docs/learning-modules/: 01-setting-up-your-workstation.html  02-intro-to-python.html  03-flow-control-and-functions.html  03-functions-flow-control-and-conditionals.html  04-data-structures.html  05-intro-to-data-science.html
docs/learning-modules/data/: billboard.csv  cms_patient_experience.csv  penguins.csv  sample_text.txt
docs/site_libs/bootstrap/: bootstrap-7a1606e66d82e84606b9c82b411ee8d3.min.css
docs/site_libs/quarto-html/: quarto-syntax-highlighting-fdd8e41e452522482f81c6f67b0e9110.css
images/: logo-ieng-331.pptx
learning-modules/: 01-setting-up-your-workstation.qmd  02-intro-to-python.qmd  03-flow-control-and-functions.qmd  03-functions-flow-control-and-conditionals.qmd  04-data-structures.qmd  05-intro-to-data-science.qmd  _03-flow-control-and-functions.qmd  _metadata.yml  example.py
learning-modules/data/: who2.csv
learning-modules/examples/: learning-module-05.py
(+4 files in other folders)
